FSC-116 added status div and styling

--- a/views/simulate.ejs
+++ b/views/simulate.ejs
@@ -10,8 +10,11 @@
 </head>
 
 <body>
+    <div class="status">
+        <p>Status</p>
+    </div>
     <div>
-        <a href="/simulate"><input type="submit" id="readytobrew" value="Open Bar!"></a>
+        <a href="/results"><input type="submit" id="readytobrew" value="Close Out"></a>
     </div>
 
     <div class="help">
