fsc-128 add buttons and info on edges of simulation page that are the same on the other pages

--- a/views/brew.ejs
+++ b/views/brew.ejs
@@ -158,7 +158,7 @@
     </div>
 
     <div class="help">
-        <input type="submit" value="Help">
+        <a href="/tutorial"><input type="submit" value="Help"></a>
     </div>
 
     <div class="reset">
