--- a/views/tutorial.ejs
+++ b/views/tutorial.ejs
@@ -20,8 +20,8 @@
     <p>The UKREL are fond of AVERAGE weather and like to order MOZE.</p>
     <p>The GHAV'IK are fond of COLD weather and like to order VEZE.</p>
 
-    <div id="return">
-        <a href="/shop"><input type="submit" value="Return"></a>
-    </div>
+    <form id="return">
+        <input type="button" value="Return" onclick="history.back()">
+    </form>
 </body>
 </html>
