--- a/views/simulate.ejs
+++ b/views/simulate.ejs
@@ -18,7 +18,9 @@
     </div>
 
     <div class="username">
-        <p><b><%= inv.username %></b>'s Cantina</p>
+        <p><b>
+                <%= inv.username %>
+            </b>'s Cantina</p>
     </div>
 
     <div class="logout">
@@ -48,8 +50,33 @@
         </div>
     </div>
 
+    <div class="sim-info-left">
+        <div class="updatinginfo">
+            <p>Updating Info</p>
+        </div>
+        <div class="updatinginfo">
+            <p>Updating Info</p>
+        </div>
+        <div class="updatinginfo">
+            <p>Updating Info</p>
+        </div>
+    </div>
+
+    <div class="sim-info-right">
+        <div class="updatinginfo">
+            <p>Updating Info</p>
+        </div>
+        <div class="updatinginfo">
+            <p>Updating Info</p>
+        </div>
+        <div class="updatinginfo">
+            <p>Updating Info</p>
+        </div>
+    </div>
+
     <div class="weather">
-        <p>Weather: <%= inv.weather %></p>
+        <p>Weather: <%= inv.weather %>
+        </p>
     </div>
 
     <div class="popularity">
