added simulation logic

--- a/views/brew.ejs
+++ b/views/brew.ejs
@@ -150,7 +150,7 @@
 
 
     <div>
-        <a href="/simulate"><input type="submit" id="readytobrew" value="Open Bar!"></a>
+        <form action="/openbar" method="post"><input type="submit" id="readytobrew" value="Open Bar!"></form>
     </div>
 
     <div class="logout">
