--- a/views/simulate.ejs
+++ b/views/simulate.ejs
@@ -11,7 +11,7 @@
 
 <body>
     <div>
-        <a href="/simulate"><input type="submit" id="readytobrew" value="Open Bar!"></a>
+        <a href="/shop"><input type="submit" id="readytobrew" value="Return to Shop"></a>
     </div>
 
     <div class="help">
