fsc-134 add stats to results page after simulation runs

--- a/views/results.ejs
+++ b/views/results.ejs
@@ -47,6 +47,32 @@
         <p>Weather: <%= inv.weather %></p>
     </div>
 
+    <div id="resultsboard">
+        <h2>BUSINESS TURNOUT</h2>
+        <div id="metrics">
+            <div id="drinkssold">
+                <h3>Drinks Sold</h3>
+                <p><b>Vemo</b>: </p>
+                <p><b>Moze</b>: </p>
+                <p><b>Veze</b>: </p>
+                <p><b>Vemo Spanu</b>: </p>
+                <p><b>Moze Spanu</b>: </p>
+                <p><b>Veze Spanu</b>: </p>
+                <p><b>Total</b>: </p>
+            </div>
+            <div id="profitmade">
+                <h3>Profit Made</h3>
+                <p><b>Vemo</b>: </p>
+                <p><b>Moze</b>: </p>
+                <p><b>Veze</b>: </p>
+                <p><b>Vemo Spanu</b>: </p>
+                <p><b>Moze Spanu</b>: </p>
+                <p><b>Veze Spanu</b>: </p>
+                <p><b>Total</b>: </p>
+            </div>
+        </div>
+    </div>
+
     <div class="popularity">
         <p>Popularity: <%= inv.popularity %>%</p>
     </div>
