--- a/public/css/app.css
+++ b/public/css/app.css
@@ -212,7 +212,22 @@ input {
   width: 33%;
 }
 /* ----------------------------------------------------------------------------------------------------- */
+/* brew.ejs only */
 
+#resultsboard {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+}
+
+#metrics {
+  display: flex;
+  justify-content: center;
+  justify-content: space-around;
+  width: 50%;
+}
+/* ----------------------------------------------------------------------------------------------------- */
 @media screen and (max-width: 700px) {
   #logoimg {
     width: 400px;
