added a feature to end game after day 10 and reroute to results screen

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -77,6 +77,18 @@ input {
   left: 5%;
 }
 
+.credits {
+  position: absolute;
+  left: 40%;
+  top: 5%;
+}
+
+.leaderboard {
+  position: absolute;
+  top: 50%;
+  left: 40%;
+}
+
 .weather {
   position: absolute;
   top: 5%;
