--- a/views/results.ejs
+++ b/views/results.ejs
@@ -49,6 +49,7 @@
 
     <div id="resultsboard">
         <h2>BUSINESS TURNOUT</h2>
+
         <div id="metrics">
             <div id="drinkssold">
                 <h3>Drinks Sold</h3>
@@ -70,6 +71,15 @@
                 <p><b>Veze Spanu</b>: </p>
                 <p><b>Total</b>: </p>
             </div>
+        </div>
+
+        <div id="leaderboard">
+            <h3>Leaderboard</h3>
+            <p><b>1st</b>: </p>
+            <p><b>2nd</b>: </p>
+            <p><b>3rd</b>: </p>
+            <p><b>4th</b>: </p>
+            <p><b>5th</b>: </p>
         </div>
     </div>
 
