--- a/views/tutorial.ejs
+++ b/views/tutorial.ejs
@@ -20,6 +20,10 @@
     <p>The UKREL are fond of AVERAGE weather and like to order MOZE.</p>
     <p>The GHAV'IK are fond of COLD weather and like to order VEZE.</p>
 
+    <p>GLOOP + VEAX + MOZUC = VEMO</p>
+    <p>GLOOP + MOZUC + ZEYOK = MOZE</p>
+    <p>GLOOP + VEAX + ZEYOK = VEZE</p>
+
     <form id="return">
         <input type="button" value="Return" onclick="history.back()">
     </form>
