fsc-139 add leaderboard to results page

--- a/views/results.ejs
+++ b/views/results.ejs
@@ -17,7 +17,23 @@
     </div>
 
     <div class="leaderboard">
-        Leaderboard goes here.
+        <div id="globalleaderboard">
+            <h3>Global Leaderboard</h3>
+            <p><b>1st</b>: </p>
+            <p><b>2nd</b>: </p>
+            <p><b>3rd</b>: </p>
+            <p><b>4th</b>: </p>
+            <p><b>5th</b>: </p>
+        </div>
+
+        <div id="personalrecords">
+            <h3>Personal Records</h3>
+            <p><b>1st</b>: </p>
+            <p><b>2nd</b>: </p>
+            <p><b>3rd</b>: </p>
+            <p><b>4th</b>: </p>
+            <p><b>5th</b>: </p>
+        </div>
     </div>
 
     <div class="logout">
